--- a/dashboard.html
+++ b/dashboard.html
@@ -369,6 +369,7 @@
                         { href: '/manage-recipes.html', text: 'Gestionar Recetas' },
                         { href: '/manage-ingredients.html', text: 'Gestionar Insumos' },
                         { href: '/manage-sauces.html', text: 'Gestionar Cremas' },
+                        { href: '/manage-users.html', text: 'Gestionar Usuarios' },
                         { href: '/manage-expenses.html', text: 'Gestionar Gastos' },
                         { href: '/accounts.html', text: 'Cuentas Abiertas' }
                     ];
